# ComfyUI-WD14-Tagger

./: .gitignore  LICENSE  README.md  __init__.py  pyproject.toml  pysssss.json  pysssss.py  requirements.txt  wd14tagger.py
js/: wd14tagger.js
web/js/: wd14tagger.js
